# fastapi-tag-exploration

./: README.md  layout.py  main.py  pyproject.toml  styles.py
components/: __init__.py  buttons.py  cards.py  forms.py  navigation.py
templates/: about.py  contact.py  index.py
